ECJ-PTI now prints any messages that the client simulation writes to stderr live, as they occur, rather than waiting until the end of the generation.